# audio-capture

./: CMakeLists.txt  README.md  README_CN.md
.github/workflows/: build-cross-platform.yml
src/: main.cpp
src/common/: common.h
src/mac/: audio_resampler.h  error_handler.h  system_audio_capture.h  system_audio_capture.mm
src/windows/: audio_resampler.h  error_handler.h  wasapi_capture.cpp  wasapi_capture.h
